--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -18,7 +18,7 @@
       <div class="loading" v-if="loading"></div>
       <div class="header">
         <img src="images/widget.gif" class="spinner-top"/>
-        <span class="logo">[web3py] dashboard</span>
+        <span class="logo">web3py Dashboard</span>
       </div>
       <div class="panel accordion">
         <input type="checkbox" id="applications">
