--- a/apps/_scaffold/static/components/auth.html
+++ b/apps/_scaffold/static/components/auth.html
@@ -33,18 +33,26 @@
     <center>
       <h2 class="subtitle">Login</h2>
     </center>    
-    <div class="field">
-      <input class="input" v-model="form.email" type="email" placeholder="email">
-      <span v-if="errors.email">{{errors.email}}</span>
+    <div class="control" style="text-align:center;margin:20px"> 
+      <a v-if="plugins.indexOf('oauth2google')>=0" 
+         class="button is-link" href="../auth/plugin/oauth2google/login">Login with Google</a>
+      <a v-if="plugins.indexOf('oauth2facebook')>=0"
+         class="button is-link" href="../auth/plugin/oauth2facbook/login">Login with Facebook</a>
     </div>
-    <div class="field">
-      <input class="input" v-model="form.password" type="password" placeholder="password">
-      <span v-if="errors.password">{{errors.password}}</span>
-    </div>
-    <div class="control" style="text-align:center">
-      <button class="button is-link" v-on:click="submit_login()">Login</button>
-      <button class="button" v-on:click="go('register')">Register</button>
-      <button class="button" v-on:click="go('request_reset_password')">Lost Password</button>
+    <div v-if="!plugins||plugins.indexOf('local')>=0">
+      <div class="field">
+        <input class="input" v-model="form.email" type="email" placeholder="email">
+        <span v-if="errors.email">{{errors.email}}</span>
+      </div>
+      <div class="field">
+        <input class="input" v-model="form.password" type="password" placeholder="password">
+        <span v-if="errors.password">{{errors.password}}</span>
+      </div>
+      <div class="control" style="text-align:center">
+        <button class="button is-link" v-on:click="submit_login()">Login</button>
+        <button class="button" v-on:click="go('register')">Register</button>
+        <button class="button" v-on:click="go('request_reset_password')">Lost Password</button>
+      </div>
     </div>
   </div>
   <div v-else-if="user === null && page=='request_reset_password'">
