fixed reloading without logging out users

--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -254,7 +254,7 @@ It is still experimental...
   <script src="js/ace/ace.js"></script>
   <script src="js/ace/ext-modelist.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/utils.js"></script>
-  <script>var USER_ID = [[=user_id or 0]]</script>
+  <script>var USER_ID = [[=user_id or 0]];</script>
   <script>T.languages = [[=languages]];</script>
   <script src="js/index.js"></script>
 </html>
