added boxes to forms

--- a/apps/examples/templates/forms.html
+++ b/apps/examples/templates/forms.html
@@ -7,6 +7,8 @@
 [[pass]]
 
 [[for form in forms:]]
-<h2>Form [[=form.form_name]]</h2>
-[[=form]]
+<h2 class="subtitle">Form [[=form.form_name]]</h2>
+<div class="box">
+  [[=form]]
+</div>
 [[pass]]
