--- a/apps/_scaffold/static/components/auth.html
+++ b/apps/_scaffold/static/components/auth.html
@@ -1,4 +1,4 @@
-<div>
+e<div>
   <div v-if="user === null && page=='register'">
     <center>
       <h2 class="subtitle">Register</h2>
@@ -39,9 +39,11 @@
     </center>    
     <div class="control" style="text-align:center;margin:20px"> 
       <a v-if="plugins.indexOf('oauth2google')>=0" 
-         class="button is-link" href="../auth/plugin/oauth2google/login">Login with Google</a>
+         class="button is-link" 
+         v-bind:href="'../auth/plugin/oauth2google/login?next='+next">Login with Google</a>
       <a v-if="plugins.indexOf('oauth2facebook')>=0"
-         class="button is-link" href="../auth/plugin/oauth2facbook/login">Login with Facebook</a>
+         class="button is-link" 
+         v-bin:href="'../auth/plugin/oauth2facbook/login?next='+next">Login with Facebook</a>
     </div>
     <div v-if="!plugins||plugins.indexOf('local')>=0">
       <div class="field">
