--- a/apps/_scaffold/templates/layout.html
+++ b/apps/_scaffold/templates/layout.html
@@ -51,7 +51,7 @@
     </section>
     <footer class="footer">
       <div class="content has-text-centered">
-        Made with web3py
+        Made with py4web
       </div>
     </footer>
   </body>
