--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -27,7 +27,7 @@
     </section>
     <footer class="footer">
       <div class="content has-text-centered">
-        I was made with web3py
+        I was made with py4web
       </div>
     </footer>
   </body>
