--- a/apps/todo/templates/layout.html
+++ b/apps/todo/templates/layout.html
@@ -12,7 +12,7 @@
     [[include]]
     <footer class="footer">
       <div class="content has-text-centered">
-        I was made with web3py (prototype), vue.js, and bulma.css
+        I was made with py4web (prototype), vue.js, and bulma.css
       </div>
     </footer>
   </body>
