--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -8,17 +8,17 @@
     <a href="https://github.com/you"><img style="position: absolute; width:100px; top:0; right:0; border:0;" src="../static/images/forkme.png"/></a>
     <div id="target" class="my-effects">
       <div class="login" v-if="!user">
-        <h1>WEB3PY</h1>
+        <h1>PY4WEB</h1>
         <h2><i class="fa fa-lock fa-2x"></i></h2>
         <form v-on:submit.prevent="login($event)">
-          <input v-model="password" type="password" placeholder="web3py password"/>          
+          <input v-model="password" type="password" placeholder="py4web password"/>          
         </form>
         [[if mode=='demo':]]<div style="margin-top:10px">Demo mode: any password will get you in</div>[[pass]]
       </div>
       <div class="loading" v-if="loading"></div>
       <div class="header">
         <img src="images/widget.gif" class="spinner-top"/>
-        <span class="logo">web3py Dashboard</span>
+        <span class="logo">py4web Dashboard</span>
       </div>
       <div class="panel accordion">
         <input type="checkbox" id="applications">
@@ -150,7 +150,7 @@
                 <td>{{ticket.method}}</td>
                 <td>{{ticket.path}}</td>
                 <td><a target="blank" v-bind:href="'/_dashboard/ticket/'+ticket.uuid">{{ticket.error}}</a></td>
-                <td><a class="button" target="blank" v-bind:href="'/_dashboard/dbadmin?app=_dashboard&dbname=db&tablename=web3py_error&filter=path%3D'+ticket.path+' and error%3D'+ticket.error">Search</a></td>
+                <td><a class="button" target="blank" v-bind:href="'/_dashboard/dbadmin?app=_dashboard&dbname=db&tablename=py4web_error&filter=path%3D'+ticket.path+' and error%3D'+ticket.error">Search</a></td>
               </tr>
             </tbody>
           </table>
