fixed a typo, fixes issue 19

--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -26,7 +26,7 @@
         <div class="applications-inner">
           <div class="right">
             <button v-on:click="upload_new_app()">Create/Upload App</button>
-            <button v-on:click="reload()">Reaload Apps</button>
+            <button v-on:click="reload()">Reload Apps</button>
           </div>
           <div>
             <button class="btn-app" width="300px" v-for="app in apps" v-on:click="select(app)">
