minor style change and dashboard working (partially) on gae

--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">    
   </head>
   <body>    
-    <a href="https://github.com/you"><img style="position: absolute; width:100px; top:0; right:0; border:0;" src="../static/images/forkme.png"/></a>
+    <a href="https://github.com/web2py/py4web"><img style="position: absolute; width:100px; top:0; right:0; border:0;" src="../static/images/forkme.png"/></a>
     <div id="target" class="my-effects">
       <div class="login" v-if="!user">
         <h1>PY4WEB</h1>
