--- a/apps/_default/templates/index.html
+++ b/apps/_default/templates/index.html
@@ -2,10 +2,12 @@
   <head>
     <style>
       body { 
-        background: white;
+        border: 0;
+        margin: 0;
+        padding: 0;
       }
       main { 
-        margin: 10vh; height: 80vh; border-radius: 10px; 
+        position: fixed; width: 100vw; height: 100vh;
         background: #0f8a9d;
         background: linear-gradient(57deg, #00C6A7 0%, #1E4D92 100%);
         color: white; font-family: Helvetica; text-align: center; }
