--- a/apps/todo/templates/layout.html
+++ b/apps/todo/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
   <link rel="stylesheet" href="[[=URL('static/css/bulma.css')]]">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <body>
