grid has spinner, crud worsk

--- a/apps/_dashboard/static/components/mtable.html
+++ b/apps/_dashboard/static/components/mtable.html
@@ -1,46 +1,48 @@
 <div>
   <table>
     <tr>
-      <td>              
-        <input v-model="filter" type="text" placeholder="filter (example id > 1)" style="width: 100%"/>
+      <td class="control">              
+        <input class="input" v-model="filter" type="text" placeholder="filter (example id > 1)" style="width: 100%" v-on:keyup.enter="search()"/>
       </td>
-      <td style="white-space: nowrap; width:10%">
-        <i class="fa fa-cross-circle"></i>
-        <button v-on:click="search()">Search</button>
-        <button v-on:click="open_create()">Create</button>
+      <td style="white-space: nowrap; width:10%; padding-left:5px">
+        <button v-on:click="search()" class="button">Search</button>
+        <button v-if="create" v-on:click="open_create()" class="button">Create</button>
       </td>
-    </tr>
+    </tr>    
     <tr>
-      <td></td>
+      <td><div>{{message}}</div></td>
       <td class="right" v-if="!table.count">(no items found)</td>
       <td class="right" v-else-if="table.count==1">(one item found)</td>
       <td class="right" v-else>({{table.count}} items found)</td>
     </tr>
   </table>        
-  <div v-if="item!=null">
-    <table>
-      <tr v-for="field in table.model">
+  <div v-if="busy" style="padding:20px; text-align:center">
+    <i class="fa fa-3x fa-spin fa-spinner"></i>
+  </div>
+  <div v-else-if="item!=null">
+    <table class="table">
+      <tr v-for="field in table.model" v-if="field.type!='id' || item.id">
         <th>{{field.label}}</th>
-        <td>
-          <input v-if="field.type=='id'" type="text" readonly v-model="item[field.name]">
-          <input v-else-if="field.type=='string'" type="text" v-model="item[field.name]" v-bind:readonly="!editable">
+        <td class="control">
+          <input class="input" v-if="field.type=='id'" type="text" readonly v-model="item[field.name]">
+          <input class="input" v-else-if="field.type=='string'" type="text" v-model="item[field.name]" v-bind:readonly="!editable">
           <span v-else-if="field.type=='boolean'" v-on:click="toggle(item, field.name)" v-bind:readonly="!editable">
             <span v-if="item[field.name]===true"><i class="fa fa-check-square"></i> True</span>
             <span v-else-if="item[field.name]===false"><i class="fa fa-square"></i> False</span>
             <span v-else><i class="fa fa-square"></i> None</span>
           </span>
-          <input v-else-if="field.type=='integer'" type="number" step="1" v-model="item[field.name]" v-bind:readonly="!editable">
-          <input v-else-if="field.type=='float'" type="number" v-model="item[field.name]" v-bind:readonly="!editable">
-          <input v-else-if="field.type=='date'" type="date" v-model="item[field.name]" v-bind:readonly="!editable">
-          <input v-else-if="field.type=='time'" type="time" v-model="item[field.name]" v-bind:readonly="!editable">
-          <input v-else-if="field.type=='datetime'" type="datetime-local" v-model="item[field.name]" v-bind:readonly="!editable">
-          <input v-else-if="field.type=='password'" type="password" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='integer'" type="number" step="1" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='float'" type="number" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='date'" type="date" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='time'" type="time" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='datetime'" type="datetime-local" v-model="item[field.name]" v-bind:readonly="!editable">
+          <input class="input" v-else-if="field.type=='password'" type="password" v-model="item[field.name]" v-bind:readonly="!editable">
           <input v-else-if="field.type=='upload'" type="text" v-model="item[field.name]" v-bind:readonly="!editable">
-          <textarea v-else-if="field.type=='text'" v-model="item[field.name]" v-bind:readonly="!editable"></textarea>
+          <textarea class="textarea" v-else-if="field.type=='text'" v-model="item[field.name]" v-bind:readonly="!editable"></textarea>
           <div class="error" v-if="editable && field.name in errors">{{errors[field.name]}}</div>
         </td>
       </tr>
-      <tr>
+      <tr v-if="item.id">
         <th>
           Referenced By
         </th>
@@ -50,18 +52,15 @@
           </div>
         </td>
       </tr>
-      <tr>
-        <td></td>
-        <td>
-          <button v-if="editable" v-on:click="save(item)">Save</button>
-          <button v-if="deletable && item && item.id" v-on:click="trash(item)">Delete</button>
-          <button v-on:click="close()">Close</button>
-        </td>
-      </tr>
     </table>
+    <div style="margin-top: 10px">
+      <button class="button" v-if="editable" v-on:click="save(item)">Save</button>
+      <button class="button" v-if="deletable && item && item.id" v-on:click="trash(item)">Delete</button>
+      <button class="button" v-on:click="close()">Close</button>
+    </div>
   </div>
   <div v-else-if="table.items.length>0">
-    <table>
+    <table class="table">
       <thead>
         <tr>
           <th v-for="field in table.model" v-on:click="reorder(field)">
@@ -96,6 +95,6 @@
         </tr>
       </tbody>
     </table>          
-    <button v-if="table.count > table.items.length" v-on:click="load()">Load More</button>
+    <button class="button" v-if="table.count > table.items.length" v-on:click="load()">Load More</button>
   </div>
 </div>
