--- a/apps/_default/templates/index.html
+++ b/apps/_default/templates/index.html
@@ -11,12 +11,14 @@
         background: #0f8a9d;
         background: linear-gradient(57deg, #00C6A7 0%, #1E4D92 100%);
         color: white; font-family: Helvetica; text-align: center; }
-      a {color:white;text-decoration:none;font-weight:bold;padding:10px 10px;border-radius:10px;border:2px solid white;transition: all .5s ease} a:hover{background:rgba(0,0,0,0.1);padding:10px 30px}
-      h1 {padding-top: 20vh; font-size: 3em }
-      h2 {padding-bottom: 10vh; }
+      main a {color:white;text-decoration:none;font-weight:bold;padding:10px 10px;border-radius:10px;border:2px solid white;transition: all .5s ease} 
+      main a:hover{background:rgba(0,0,0,0.1);padding:10px 30px}
+      main h1 {padding-top: 20vh; font-size: 3em }
+      main h2 {padding-bottom: 10vh; }
     </style>
   </head>
   <body>
+    <a href="https://github.com/web2py/py4web" style="position:fixed;z-index:1000;top:0;right:0;"><img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_red_aa0000.png?resize=149%2C149" class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1"></a>
     <main>
       <h1>PY4WEB</h1>
       <h2>is running and it's a whole new ball game.</h2>
