--- a/apps/examples/templates/layout.html
+++ b/apps/examples/templates/layout.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
     <link rel="stylesheet" href="css/bulma.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    [[block page_head]]<!-- individual page can customize head here -->[[end]]
+    [[block page_head]]<!-- individual pages can customize head here -->[[end]]
   </head>
   <body>    
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
@@ -23,12 +23,12 @@
       </div>
       <div id="left-navbar" class="navbar-menu">
         <div class="navbar-start">       
-          [[block page_menu_items]]<!-- individual page can add menu items here -->[[end]]
+          [[block page_menu_items]]<!-- individual pages can add menu items here -->[[end]]
         </div>
       </div>
     </nav>
     <section class="section">
-      <!-- begin of HTML inserted by extending template -->
+      <!-- beginning of HTML inserted by extending template -->
       [[include]]
       <!-- end of HTML inserted by extending template -->
     </section>
