--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -22,7 +22,7 @@
     <td><a href="[[=URL('update_form/1')]]">example</a></td>
   </tr>
   <tr>
-    <td>A page with an ajax powred grid</td>
+    <td>A page with an ajax powered grid</td>
     <td><a href="[[=URL('grid')]]">example</a></td>
   </tr>
   <tr>
