--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -33,4 +33,12 @@
     <td>A page using yatl helpers</td>
     <td><a href="[[=URL('helpers')]]">example</a></td>
   </tr>
+  <tr>
+    <td>A page using internationalization (try set browser to italian)</td>
+    <td><a href="[[=URL('hello')]]">example</a></td>
+  </tr>
+  <tr>
+    <td>A page using pluralization (try set browser to italian)</td>
+    <td><a href="[[=URL('count')]]">example</a></td>
+  </tr>
 </table>
